force-app/main/default/objects/Third_Party_Compliance__c/Third_Party_Compliance__c.object-meta.xml
<CustomObject>
    <description>Tracks reseller and account compliance status as a lightweight Salesforce replacement for Third Party Manager.</description>
    <label>Third Party Compliance</label>
    <nameField>
        <displayFormat>TPC-{00000}</displayFormat>
        <label>Compliance Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Third Party Compliance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>