force-app/main/default/objects/Third_Party_Compliance__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account, reseller, or partner this compliance record belongs to.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Third Party Compliance</relationshipLabel>
    <relationshipName>Third_Party_Compliance</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>