force-app/main/default/objects/Third_Party_Compliance__c/fields/Account_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Account_Address_City__c</fullName>
    <formula>IF(NOT(ISBLANK(Account__r.D_B_Record__c)), Account__r.D_B_Record__r.Geocoded_City__c, Account__r.BillingCity)</formula>
    <label>Account Address City</label>
    <type>Text</type>
</CustomField>