force-app/main/default/objects/Third_Party_Compliance__c/fields/Account_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Address_Country__c</fullName>
    <formula>IF(NOT(ISBLANK(Account__r.D_B_Record__c)), Account__r.D_B_Record__r.Geocoded_Country__c, Account__r.BillingCountry)</formula>
    <label>Account Address Country</label>
    <type>Text</type>
</CustomField>