force-app/main/default/objects/Third_Party_Compliance__c/fields/Account_Address_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Address_Postal_Code__c</fullName>
    <formula>IF(NOT(ISBLANK(Account__r.D_B_Record__c)), Account__r.D_B_Record__r.Geocoded_Zip__c, Account__r.BillingPostalCode)</formula>
    <label>Account Address Postal Code</label>
    <type>Text</type>
</CustomField>