force-app/main/default/objects/Third_Party_Compliance__c/fields/Account_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Account_Address_State__c</fullName>
    <formula>IF(NOT(ISBLANK(Account__r.D_B_Record__c)), Account__r.D_B_Record__r.Geocoded_State__c, Account__r.BillingState)</formula>
    <label>Account Address State</label>
    <type>Text</type>
</CustomField>