force-app/main/default/objects/Third_Party_Compliance__c/fields/Account_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Account_Address_Street__c</fullName>
    <formula>Account__r.BillingStreet</formula>
    <label>Account Address Street</label>
    <type>Text</type>
</CustomField>