force-app/main/default/objects/Third_Party_Compliance__c/fields/Account_Detail_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Detail_Source__c</fullName>
    <formula>IF(NOT(ISBLANK(Account__r.D_B_Record__c)), &quot;D&amp;B Record&quot;, &quot;Account Sold-To / Billing&quot;)</formula>
    <label>Account Detail Source</label>
    <type>Text</type>
</CustomField>