force-app/main/default/objects/Third_Party_Compliance__c/fields/Account_Reference_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Reference_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(Account__r.D_B_Record__c)), Account__r.D_B_Record__r.Duns_Name__c, Account__r.Name)</formula>
    <label>Account Reference Name</label>
    <type>Text</type>
</CustomField>