force-app/main/default/objects/Third_Party_Compliance__c/fields/Account_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Reference_Number__c</fullName>
    <formula>IF(NOT(ISBLANK(Account__r.D_B_Record__c)), Account__r.D_B_Record__r.Duns_Number__c, Account__r.SVMX_Sold_To_ID__c)</formula>
    <label>Account Reference Number</label>
    <type>Text</type>
</CustomField>