force-app/main/default/objects/Third_Party_Compliance__c/fields/Compliance_Type__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Type__c</fullName>
    <description>Type of third-party compliance assessment.</description>
    <label>Compliance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reseller</fullName>
                <default>true</default>
                <label>Reseller</label>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Other Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>