force-app/main/default/objects/Third_Party_Compliance__c/fields/Proof_Documents_Required__c.field-meta.xml
<CustomField>
    <fullName>Proof_Documents_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether proof documents are expected to be attached through Salesforce Files.</description>
    <label>Proof Documents Required</label>
    <type>Checkbox</type>
</CustomField>